Fixed header z-index

--- a/css/header.css
+++ b/css/header.css
@@ -28,7 +28,7 @@ html,
     rgba(218, 165, 32, 1) 100%
   );
   box-shadow: #00000077 0 2px 8px;
-  z-index: 1;
+  z-index: 10;
   box-sizing: border-box;
 }
 
